Add lesson data and fill in 'getting ready'

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 <h2 id="prerequisites"><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
 </div>
 <div class="panel-body">
-<p>What learners need to know before tackling this lesson.</p>
+<p>There are no strict prerequisites. The following would be helpful:</p>
+<ul>
+<li>Familiarity with the command line, for running a mongo server locally and importing data.</li>
+<li>Familiarity with programming in Python, for learning commands using the <code>mongomock</code> (if no server is available) or <code>pymongo</code> packages.</li>
+</ul>
 </div>
 </section>
 <section class="getready panel panel-warning">
@@ -43,7 +47,14 @@
 <h2 id="getting-ready"><span class="glyphicon glyphicon-check"></span>Getting ready</h2>
 </div>
 <div class="panel-body">
-<p>You need to download some files to follow this lesson:</p>
+<p>You need to download a data file to follow this lesson:</p>
+<ol style="list-style-type: decimal">
+<li>Make a new folder in your Desktop called <code>mongo-novice-materials</code>.</li>
+<li>Download <a href="./data/mongo-novice-materials.json.zip">mongo-novice-materials.json.zip</a> and move the file to this folder.</li>
+<li>If it’s not unzipped yet, double-click on it to unzip it. You should end up with a new file called <code>mongo-novice-materials.json</code>.</li>
+<li>You can access this folder from the Unix shell with:</li>
+</ol>
+<pre class="input"><code>$ cd &amp;&amp; cd Desktop/mongo-novice-materials/</code></pre>
 </div>
 </section>
 <h2 id="topics">Topics</h2>
