draft topic 2, with two challenges

--- a/reference.html
+++ b/reference.html
@@ -31,11 +31,11 @@
           <p>…commands and examples…</p>
 <h2 id="glossary">Glossary</h2>
 <dl>
-<dt><span id="key-word-1">key word 1</span></dt>
-<dd>Definition of first term
+<dt><span id="mock-object">mock object</span></dt>
+<dd>In object-oriented programming, mock objects are simulated objects that mimic the behavior of real objects in controlled ways.
 </dd>
-<dt><span id="key-word-2">key word 2</span></dt>
-<dd>Definition of second term
+<dt><span id="sql">SQL</span></dt>
+<dd>Structured Query Language, a widely-used, declarative language for relational databases.
 </dd>
 </dl>
         </div>
