Draft 'Insert Data' topic

--- a/reference.html
+++ b/reference.html
@@ -37,6 +37,9 @@
 <dt><span id="sql">SQL</span></dt>
 <dd>Structured Query Language, a widely-used, declarative language for relational databases.
 </dd>
+<dt><span id="json">JSON</span></dt>
+<dd>A lightweight data-interchange format, based on a subset of the JavaScript programming language. More info at <a href="http://www.json.org/">json.org</a>
+</dd>
 </dl>
         </div>
       </div>
