Offer unzipped starting .json
For #1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap-theme.css" />
     <link rel="stylesheet" type="text/css" href="css/swc.css" />
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
     <link rel="alternate" type="application/rss+xml" title="Software Carpentry Blog" href="http://software-carpentry.org/feed.xml"/>
     <meta charset="UTF-8" />
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -50,8 +51,7 @@
 <p>You need to download a data file to follow this lesson:</p>
 <ol style="list-style-type: decimal">
 <li>Make a new folder in your Desktop called <code>mongo-novice-materials</code>.</li>
-<li>Download <a href="./data/mongo-novice-materials.json.zip">mongo-novice-materials.json.zip</a> and move the file to this folder.</li>
-<li>If it’s not unzipped yet, double-click on it to unzip it. You should end up with a new file called <code>mongo-novice-materials.json</code>.</li>
+<li>Download <a href="./data/mongo-novice-materials.json">mongo-novice-materials.json</a> (Right-click the link and “Save as…”) to this folder. (Slow network connection? Download <a href="./data/mongo-novice-materials.json.zip">mongo-novice-materials.json.zip</a> to this folder, and double-click on it to unzip it.)</li>
 <li>You can access this folder from the Unix shell with:</li>
 </ol>
 <pre class="input"><code>$ cd &amp;&amp; cd Desktop/mongo-novice-materials/</code></pre>
