cull some fields from data. forget .zip file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p>This lesson was originally developed at the <a href="http://lbl.gov">Lawrence Berkeley National Laboratory</a>, where many scientists use MongoDB servers hosted by <a href="http://nersc.gov">NERSC</a> to <a href="https://pythonhosted.org/FireWorks/">manage workflows</a> and <a href="https://pythonhosted.org/pymatgen-db/">process data</a> on supercomputing clusters. The example data for this lesson is from the <a href="https://materialsproject.org">Materials Project</a>, which hosts computed information for tens of thousands of known and predicted inorganic crystalline compounds.</p>
 <section class="prereq panel panel-warning">
 <div class="panel-heading">
-<h2><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
+<h2 id="prerequisites"><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
 </div>
 <div class="panel-body">
 <p>There are no strict prerequisites. The following would be helpful:</p>
@@ -45,13 +45,13 @@
 </section>
 <section class="getready panel panel-warning">
 <div class="panel-heading">
-<h2><span class="glyphicon glyphicon-check"></span>Getting ready</h2>
+<h2 id="getting-ready"><span class="glyphicon glyphicon-check"></span>Getting ready</h2>
 </div>
 <div class="panel-body">
 <p>You need to download a data file to follow this lesson:</p>
 <ol style="list-style-type: decimal">
 <li>Make a new folder in your Desktop called <code>mongo-novice-materials</code>.</li>
-<li>Download <a href="./data/mongo-novice-materials.json">mongo-novice-materials.json</a> (Right-click the link and “Save as…”) to this folder. (Slow network connection? Download <a href="./data/mongo-novice-materials.json.zip">mongo-novice-materials.json.zip</a> to this folder, and double-click on it to unzip it.)</li>
+<li>Download <a href="./data/mongo-novice-materials.json">mongo-novice-materials.json</a> (~20 MB) (Right-click the link and “Save as…”) to this folder.</li>
 <li>You can access this folder from the Unix shell with:</li>
 </ol>
 <pre class="input"><code>$ cd &amp;&amp; cd Desktop/mongo-novice-materials/</code></pre>
