Add periodic_table JSON data

--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
 <h2 id="getting-ready"><span class="glyphicon glyphicon-check"></span>Getting ready</h2>
 </div>
 <div class="panel-body">
-<p>You need to download a data file to follow this lesson:</p>
+<p>You need to download two data files to follow this lesson:</p>
 <ol style="list-style-type: decimal">
-<li>Make a new folder in your Desktop called <code>mongo-novice-materials</code>.</li>
+<li>Make a new folder in your Desktop called <code>data</code>.</li>
 <li>Download <a href="./data/mongo-novice-materials.json">mongo-novice-materials.json</a> (~20 MB) (Right-click the link and “Save as…”) to this folder.</li>
-<li>You can access this folder from the Unix shell with:</li>
+<li>Download <a href="./data/periodic_table.json">periodic_table.json</a> (~120 KB) to the same folder.</li>
 </ol>
-<pre class="input"><code>$ cd &amp;&amp; cd Desktop/mongo-novice-materials/</code></pre>
 </div>
 </section>
 <h2 id="topics">Topics</h2>
