Update stupid joke

--- a/07-update.html
+++ b/07-update.html
@@ -146,7 +146,7 @@ db.elements.drop() <span class="co"># If it exists, clear it</span>
 </section>
 <section class="challenge panel panel-success">
 <div class="panel-heading">
-<h2 id="phase-change-memory"><span class="glyphicon glyphicon-pencil"></span>Phase-change Memory?</h2>
+<h2 id="hows-your-phase-change-memory"><span class="glyphicon glyphicon-pencil"></span>How’s Your Phase-change Memory?</h2>
 </div>
 <div class="panel-body">
 <p>A chalcogenide is a chemical compound consisting of at least one chalcogen anion (commonly restricted to ‘S’, ‘Se’, or ‘Te’) and at least one more electropositive element. Modify the <code>halide_systems</code> generator we wrote and use <code>update_many()</code> to ensure a “chalcogenide” tag for all binary chalcogenides.</p>
