--- a/06-sort.html
+++ b/06-sort.html
@@ -193,8 +193,8 @@ systems <span class="op">=</span> <span class="bu">filter</span>(<span class="va
       </article>
       <div class="footer">
         <a class="label swc-blue-bg" href="http://software-carpentry.org">Software Carpentry</a>
-        <a class="label swc-blue-bg" href="https://github.com/swcarpentry/lesson-template">Source</a>
-        <a class="label swc-blue-bg" href="mailto:admin@software-carpentry.org">Contact</a>
+        <a class="label swc-blue-bg" href="https://github.com/dwinston/mongo-novice-materials">Source</a>
+        <a class="label swc-blue-bg" href="mailto:dwinston@lbl.gov">Contact</a>
         <a class="label swc-blue-bg" href="LICENSE.html">License</a>
       </div>
     </div>
