--- a/07-update.html
+++ b/07-update.html
@@ -157,8 +157,8 @@ db.elements.drop() <span class="co"># If it exists, clear it</span>
       </article>
       <div class="footer">
         <a class="label swc-blue-bg" href="http://software-carpentry.org">Software Carpentry</a>
-        <a class="label swc-blue-bg" href="https://github.com/swcarpentry/lesson-template">Source</a>
-        <a class="label swc-blue-bg" href="mailto:admin@software-carpentry.org">Contact</a>
+        <a class="label swc-blue-bg" href="https://github.com/dwinston/mongo-novice-materials">Source</a>
+        <a class="label swc-blue-bg" href="mailto:dwinston@lbl.gov">Contact</a>
         <a class="label swc-blue-bg" href="LICENSE.html">License</a>
       </div>
     </div>
