Attribute using footnotes. Yay pandoc.

--- a/03-insert.html
+++ b/03-insert.html
@@ -42,15 +42,7 @@
 </ul>
 </div>
 </section>
-<aside class="callout panel panel-info">
-<div class="panel-heading">
-<h2 id="proper-attribution"><span class="glyphicon glyphicon-pushpin"></span>Proper attribution</h2>
-</div>
-<div class="panel-body">
-<p>The intro to JSON here, including the railroad diagrams, were taken from <a href="http://json.org">json.org</a>.</p>
-</div>
-</aside>
-<p><a href="reference.html#json">JSON</a>, i.e. JavaScript Object Notation, is a lightweight data-interchange format built on two universal data structures:</p>
+<p><a href="reference.html#json">JSON</a>, i.e. JavaScript Object Notation, is a lightweight data-interchange format built on two universal data structures <a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>:</p>
 <ul>
 <li>a mapping of names to values. In various languages, this is realized as an object, record, struct, dictionary, hash table, keyed list, or associative array.</li>
 <li>an ordered list of values. In most languages, this is realized as an array, vector, list, or sequence.</li>
@@ -189,6 +181,12 @@ result.deleted_count</code></pre></div>
 <p>What happens when you try to re-create and insert the example (fake) <code>material</code> document again?</p>
 </div>
 </section>
+<div class="footnotes">
+<hr />
+<ol>
+<li id="fn1"><p>The intro to JSON here, including the railroad diagrams, were taken from <a href="http://json.org">json.org</a>.<a href="#fnref1">↩</a></p></li>
+</ol>
+</div>
         </div>
       </div>
       </article>
