--- a/04-find.html
+++ b/04-find.html
@@ -42,7 +42,7 @@
 </ul>
 </div>
 </section>
-<p>You can use the <code>find()</code> method to issue a query to retrieve data from a collection in MongoDB. All queries in MongoDB have the scope of a single collection.</p>
+<p>You can use the <code>find()</code> method to issue a query to retrieve data from a collection in MongoDB. All queries in MongoDB have the scope of a single collection.<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a></p>
 <p>Queries can return all documents in a collection or only the documents that match a specified filter or criteria. You can specify the filter or criteria in a document and pass it as a parameter to the <code>find()</code> method.</p>
 <p>The <code>find()</code> method returns query results in a cursor, which is an iterable object that yields documents.</p>
 <h3 id="gotta-catch-em-all">Gotta catch ’em all</h3>
@@ -209,6 +209,12 @@ mp-3236</code></pre>
 </ol>
 </div>
 </section>
+<div class="footnotes">
+<hr />
+<ol>
+<li id="fn1"><p>Much of the format and language of this lesson from here on out borrow heavily (and occasionally are copied) from mongodb.org’s <a href="https://docs.mongodb.org/getting-started/python/">Getting Started</a> guide, available under the terms of a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons License</a>.<a href="#fnref1">↩</a></p></li>
+</ol>
+</div>
         </div>
       </div>
       </article>
