--- a/instructors.html
+++ b/instructors.html
@@ -31,8 +31,8 @@
           <h2 class="subtitle">Instructor’s Guide</h2>
           <h2 id="overall">Overall</h2>
 <ul>
-<li><p>Point</p></li>
-<li><p>Point</p></li>
+<li><p>TODO a small section on document design, i.e. nested vs flat.</p></li>
+<li><p>TODO a small section on query efficiency, esp. wrt projections. Novice users tend to have a “let’s grab everything” approach.</p></li>
 </ul>
 <h2 id="introductionsetup"><a href="01-intro.html">Introduction/Setup</a></h2>
 <ul>
