Require only mongo shell, no Jupyter / python

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h2 id="topics">Topics</h2>
 <ol style="list-style-type: decimal">
 <li><a href="01-intro.html">Introduction/Setup</a></li>
-<li><a href="02-mockconn.html">Connect to / Import into a Mock Database</a></li>
+<li><a href="02-connimport.html">Connect to / Import into a Database</a></li>
 <li><a href="03-insert.html">Insert Data</a></li>
 <li><a href="04-find.html">Find Data</a></li>
 <li><a href="05-operators.html">Specify Conditions with Operators</a></li>
